shorten icon list and create custome icon

--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -7,10 +7,10 @@
 {% assign icon_style = icon_type %}
 {% assign icon_path = "/assets/images/icons/" | append: icon_type | append: "/" | append: svg_icon  | append: '.svg' %}
 
-<div class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
+<span class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
     {% if env_bookshop_live %}
         <div class="{{ c }}__image" style="--url: url('{{ icon_path }}')"></div>
     {% else %}
         {{ '/src' | append: icon_path  | svgContents: "c-icon__svg" }}
     {% endif %}
-</div>
+<span/>
