--- a/component-library/components/generic/custom-icon/custom-icon.eleventy.liquid
+++ b/component-library/components/generic/custom-icon/custom-icon.eleventy.liquid
@@ -1,4 +1,4 @@
-{% assign c = "c-icon" %}
+{% assign c = "c-custom-icon" %}
 
 {% assign icon_style="custom" %}
 {% assign icon_path=svg_icon %}
@@ -10,7 +10,7 @@
     {% assign icon_path = "/assets/images/icons/" | append: svg_icon  | append: '.svg' %}
 {% endif %}
 
-<div class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
+<div class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-custom-icon-color: {{ color }}">
     {% if env_bookshop_live %}
         <div class="{{ c }}__image" style="--url: url('{{ icon_path }}')"></div>
     {% else %}
