--- a/component-library/components/generic/custom-icon/custom-icon.scss
+++ b/component-library/components/generic/custom-icon/custom-icon.scss
@@ -7,16 +7,16 @@
 
   &--round {
     border-radius: 50%;
-    border-color: var(--c-icon-color, #fff);
+    border-color: var(--c-custom-icon-color, #fff);
     border-style: solid;
   }
 
-  &--round.c-icon--large {
+  &--round.c-custom-icon--large {
     padding: 0.95rem;
     border-width: 0.125rem;
   }
 
-  &--round.c-icon--small {
+  &--round.c-custom-icon--small {
     padding: 0.4rem;
     border-width: 0.063rem;
   }
@@ -32,18 +32,18 @@
   }
 
   &--outline {
-    .c-icon__svg {
-      stroke: var(--c-icon-color, #fff);
+    .c-custom-icon__svg {
+      stroke: var(--c-custom-icon-color, #fff);
     }
   }
   &--solid {
-    .c-icon__svg {
-      fill: var(--c-icon-color, #fff);
+    .c-custom-icon__svg {
+      fill: var(--c-custom-icon-color, #fff);
     }
   }
 
   &__image {
-    background: var(--c-icon-color);
+    background: var(--c-custom-icon-color);
     width: 100%;
     height: 100%;
     mask: var(--url);
