add onlcick and id props

--- a/component-library/components/generic/button/button.eleventy.liquid
+++ b/component-library/components/generic/button/button.eleventy.liquid
@@ -1,39 +1,22 @@
 {% assign c = "c-button" %}
+{% assign icon_color1 = "#F9F9FB" %}
+{% if disabled %}
+    {% assign icon_color1 = "#6E6E70" %}
+{% endif %}
+{% assign arrow = "arrow-" | append: arrow %}
 
 {% if url and url!=''%}
-    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %}>
+    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} target="_blank" rel="noopener noreferrer" onclick="{{ onclick }}" id="{{ id }}">
         {{ text }}
         {% if arrow %}
-            {% if arrow=="up" %}
-                up
-            {% endif %}
-            {% if arrow=="down" %}
-                down
-            {% endif %}
-            {% if arrow=="left" %}
-                left
-            {% endif %}
-            {% if arrow=="right" %}
-                right
-            {% endif %}
-        {% endif %} 
+            {% bookshop "generic/icon" svg_icon:arrow icon_type:"solid" icon_size:'tiny'  color:icon_color1 %}
+        {% endif %}
     </a>
     {% else %}
-    <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %}>
-        {{ text }} 
+    <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} onclick='{{ onclick }}' id="{{ id }}">
+        {{ text }}
         {% if arrow %}
-            {% if arrow=="up" %}
-                up
-            {% endif %}
-            {% if arrow=="down" %}
-                down
-            {% endif %}
-            {% if arrow=="left" %}
-                left
-            {% endif %}
-            {% if arrow=="right" %}
-                right
-            {% endif %}
-        {% endif %} 
+            {% bookshop "generic/icon" svg_icon:arrow icon_type:"solid" icon_size:'tiny'  color:icon_color1 %}
+        {% endif %}
     </button>
 {% endif %}
