--- a/component-library/components/generic/icon/icon.scss
+++ b/component-library/components/generic/icon/icon.scss
@@ -31,6 +31,11 @@
         height: 2rem;
     }
 
+    &--extra-small {
+        width: 1rem;
+        height: 1rem;
+    }
+
     &--outline {
         .c-icon__svg {
             stroke: var(--c-icon-color, #FFF);
