--- a/component-library/components/generic/form/time-input/time-input.scss
+++ b/component-library/components/generic/form/time-input/time-input.scss
@@ -62,4 +62,12 @@
         line-height: var(--line-height);
         color: var(--brand-grey-000, #F9F9FB);
     }
+    
+    &__error {
+        display: none;
+        color: var(--error-red-300, #BF2323);
+        gap: 8px;
+        font-size: var(--paragraph-small);
+        line-height: var(--line-height);
+    }
 }
