--- a/component-library/components/generic/form/text-input/text-input.eleventy.liquid
+++ b/component-library/components/generic/form/text-input/text-input.eleventy.liquid
@@ -2,6 +2,8 @@
 <div class="{{ c }}">
     <label class="{{ c }}__label" for="{{ name_and_id }}">{{ label }}{% if required %} *{% endif %}</label>
     <input class="{{ c }}__input"
+        onblur="validateInput(this)"
+        oninput="validateInputTyping(this)"
         type="text" id="{{ name_and_id }}" 
         name="{{ name_and_id }}" 
         placeholder="{{ placeholder }}"
@@ -14,4 +16,8 @@
         </div>
     {% endif %}
 
+    <div class="{{ c }}__error error">
+        {% bookshop "generic/icon" svg_icon:"outline/x-circle" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
+        <p class="{{ c }}__error__text error__text">Error Message<p>
+    </div>
 </div>
