--- a/component-library/components/generic/button/button.scss
+++ b/component-library/components/generic/button/button.scss
@@ -19,6 +19,7 @@
     cursor: pointer;
     & .c-icon__image {
       background-color: var(--_button-color);
+      fill: var(--_button-color);
     }
   }
   &--primary {
@@ -29,6 +30,7 @@
       background: var(--brand-grey-000, #f9f9fb);
       & .c-icon__image {
         background-color: var(--_button-color);
+        fill: var(--_button-color);
       }
     }
   }
@@ -47,5 +49,6 @@
   }
   & .c-icon__image {
     background-color: var(--_button-color);
+    fill: var(--_button-color);
   }
 }
