--- a/component-library/components/generic/form/checkbox-group/checkbox-group.eleventy.liquid
+++ b/component-library/components/generic/form/checkbox-group/checkbox-group.eleventy.liquid
@@ -1,10 +1,11 @@
 {% assign_local c = "c-checkbox-group" %}
 <div class="{{ c }}">
-    <fieldset class="{{ c }}__group">
+    <fieldset class="{{ c }}__group" onClick="validateInputGroup(this)">
         <legend class="{{ c }}__group__label">{{ label }}</legend>
         <div class="{{ c }}__group__inputs {{ c }}__group__inputs--arrangement-{{ arrangement }}">
+            {% assign_local group_name = id %}
             {% for item in checkboxes %}
-                {% bookshop "generic/form/checkbox-input" bind:item %}
+                {% bookshop "generic/form/checkbox-input" bind:item group_name:group_name %}
             {% endfor %}
         </div>
     </fieldset>
@@ -16,4 +17,8 @@
         </div>
     {% endif %}
 
+    <div class="{{ c }}__error error">
+        {% bookshop "generic/icon" svg_icon:"outline/x-circle" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
+        <p class="{{ c }}__error__text error__text">Error Message<p>
+    </div>
 </div>
