--- a/component-library/components/generic/form/checkbox-input/checkbox-input.eleventy.liquid
+++ b/component-library/components/generic/form/checkbox-input/checkbox-input.eleventy.liquid
@@ -1,5 +1,10 @@
 {% assign_local c = "c-checkbox-input" %}
 <div class="{{ c }}">
-  <input class="{{ c }}__input" type="checkbox" id="{{ label }}" name="{{ id }}" {% if checked %}checked{% endif %} {% if required %}required{% endif %} />
-  <label class="{{ c }}__label" for="{{ label }}">{{ label }}</label>
+  <input class="{{ c }}__input" 
+      type="checkbox" 
+      id="{{ id }}" 
+      name="{{ group_name }}" 
+      {% if checked %}checked{% endif %} 
+      {% if required %}required{% endif %} />
+  <label class="{{ c }}__label" for="{{ id }}">{{ label }}{% if required %} *{% endif %}</label>
 </div>
