--- a/component-library/components/generic/form/country-select-input/country-select-input.eleventy.liquid
+++ b/component-library/components/generic/form/country-select-input/country-select-input.eleventy.liquid
@@ -1,9 +1,9 @@
 {% assign_local c = "c-country-select-input" %}
 <div class="{{ c }}">
-  <label class="{{ c }}__label" for="{{ name_and_id }}">{{ label }}</label>
+  <label class="{{ c }}__label" for="{{ id }}">{{ label }}</label>
   <select class="{{ c }}__input"
-    name="{{ name_and_id }}"
-    id="{{ name_and_id }}">
+    name="{{ label }}"
+    id="{{ id }}">
     <option value="164" selected>USA</option>
     <option value="286">Aaland Islands</option>
     <option value="274">Afghanistan</option>
