--- a/component-library/components/generic/form/phone-input/phone-input.eleventy.liquid
+++ b/component-library/components/generic/form/phone-input/phone-input.eleventy.liquid
@@ -1,9 +1,9 @@
 {% assign_local c = "c-phone-input" %}
 <div class="{{ c }}">
-    <label class="{{ c }}__label" for="{{ name_and_id }}">{{ label }}{% if required %} *{% endif %}</label>
+    <label class="{{ c }}__label" for="{{ id }}">{{ label }}{% if required %} *{% endif %}</label>
     <input class="{{ c }}__input"
-        type="tel" id="{{ name_and_id }}" 
-        name="{{ name_and_id }}" 
+        type="tel" id="{{ id }}" 
+        name="{{ label }}" 
         placeholder="{{ placeholder }}"
         {% if required %}required{% endif %}
         onblur="validateInput(this)"
