--- a/component-library/components/generic/form/radio-button-group/radio-button-group.eleventy.liquid
+++ b/component-library/components/generic/form/radio-button-group/radio-button-group.eleventy.liquid
@@ -1,11 +1,11 @@
 {% assign_local c = "c-radio-button-group" %}
 <div class="{{ c }}">
-    <fieldset class="{{ c }}__group">
+    <fieldset class="{{ c }}__group" onClick="validateInputGroup(this)">
         <legend class="{{ c }}__group__label">{{ label }}</legend>
         <div class="{{ c }}__group__inputs {{ c }}__group__inputs--arrangement-{{ arrangement }}">
-            {% assign groupname = heading %}
+            {% assign_local group_name = id %}
             {% for item in radio_buttons %}
-                {% bookshop "generic/form/radio-input" bind:item %}
+                {% bookshop "generic/form/radio-input" bind:item required:required group_name:group_name %}
             {% endfor %}
         </div>
 
@@ -17,5 +17,10 @@
             <p class="{{ c }}__helper__text">{{ helper_text }}<p>
         </div>
     {% endif %}
+
+    <div class="{{ c }}__error error">
+        {% bookshop "generic/icon" svg_icon:"outline/x-circle" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
+        <p class="{{ c }}__error__text error__text">Error Message<p>
+    </div>
 
 </div>
