--- a/component-library/components/generic/form/radio-button-group/radio-button-group.scss
+++ b/component-library/components/generic/form/radio-button-group/radio-button-group.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     gap: 4px;
-    
+
     &__group {
         padding: 12px 16px;
         border-radius: 4px;
@@ -30,5 +30,13 @@
         font-size: var(--paragraph-small);
         line-height: var(--line-height);
         color: var(--brand-grey-000, #F9F9FB);
+    }
+        
+    &__error {
+        display: none;
+        color: var(--error-red-300, #BF2323);
+        gap: 8px;
+        font-size: var(--paragraph-small);
+        line-height: var(--line-height);
     }
 }
