--- a/component-library/components/generic/form/select-input/select-input.eleventy.liquid
+++ b/component-library/components/generic/form/select-input/select-input.eleventy.liquid
@@ -1,9 +1,9 @@
 {% assign_local c = "c-select-input" %}
 <div class="{{ c }}">
-  <label class="{{ c }}__label" for="{{ name_and_id }}">{{ label }}</label>
+  <label class="{{ c }}__label" for="{{ id }}">{{ label }}</label>
   <select class="{{ c }}__input"
-    name="{{ name_and_id }}"
-    id="{{ name_and_id }}">
+    name="{{ label }}"
+    id="{{ id }}">
     {% for option in options %}
         <option value="{{ option.key }}">{{ option.key }}</option>
     {% endfor %}
