--- a/component-library/components/generic/form/text-area-input/text-area-input.eleventy.liquid
+++ b/component-library/components/generic/form/text-area-input/text-area-input.eleventy.liquid
@@ -1,9 +1,9 @@
 {% assign_local c = "c-text-area-input" %}
 <div class="{{ c }}">
-    <label class="{{ c }}__label" for="{{ name_and_id }}">{{ label }}{% if required %} *{% endif %}</label>
+    <label class="{{ c }}__label" for="{{ id }}">{{ label }}{% if required %} *{% endif %}</label>
     <textarea class="{{ c }}__input"
-        id="{{ name_and_id }}" 
-        name="{{ name_and_id }}" 
+        id="{{ id }}" 
+        name="{{ label }}" 
         placeholder="{{ placeholder }}"
         {% if required %}required{% endif %}
         rows="{{ rows }}"
