--- a/component-library/components/generic/form/text-input/text-input.eleventy.liquid
+++ b/component-library/components/generic/form/text-input/text-input.eleventy.liquid
@@ -1,11 +1,11 @@
 {% assign_local c = "c-text-input" %}
 <div class="{{ c }}">
-    <label class="{{ c }}__label" for="{{ name_and_id }}">{{ label }}{% if required %} *{% endif %}</label>
+    <label class="{{ c }}__label" for="{{ id }}">{{ label }}{% if required %} *{% endif %}</label>
     <input class="{{ c }}__input"
         onblur="validateInput(this)"
         oninput="validateInputTyping(this)"
-        type="text" id="{{ name_and_id }}" 
-        name="{{ name_and_id }}" 
+        type="text" id="{{ id }}" 
+        name="{{ label }}" 
         placeholder="{{ placeholder }}"
         {% if required %}required{% endif %}>
 
