--- a/component-library/components/generic/form/date-input/date-input.scss
+++ b/component-library/components/generic/form/date-input/date-input.scss
@@ -62,4 +62,12 @@
         justify-self: end;
         margin-right: 16px;
     }
+
+    &__error {
+        display: none;
+        color: var(--error-red-300, #BF2323);
+        gap: 8px;
+        font-size: var(--paragraph-small);
+        line-height: var(--line-height);
+    }
 }
