--- a/component-library/components/generic/form/date-input/date-input.eleventy.liquid
+++ b/component-library/components/generic/form/date-input/date-input.eleventy.liquid
@@ -10,14 +10,15 @@
         {% if max_today %}max="{{ 'now' | date: '%Y-%m-%d' }}"{% elsif max_today %}max="{{ max | date: '%Y-%m-%d' }}"{% endif %}
         onfocus="setMinMaxDateToday(this)"
         onblur="validateInput(this)"
-        {% if required %}required{% endif %}>
+        {% if required %}required{% endif %}
+        {% if helper_text %}aria-describedby="{{ id }}--helper"{% endif %}>
     <div class="{{ c }}__icon">{% bookshop "generic/icon" svg_icon:"outline/calendar-days" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
     <div class="{{ c }}__dropdown-arrow">{% bookshop "generic/icon" svg_icon:"solid/chevron-down" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
 
     {% if helper_text %}
         <div class="{{ c }}__helper">
             {% bookshop "generic/icon" svg_icon:"outline/information-circle" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
-            <p class="{{ c }}__helper__text">{{ helper_text }}<p>
+            <p class="{{ c }}__helper__text" id="{{ id }}--helper" role="tooltip">{{ helper_text }}<p>
         </div>
     {% endif %}
 
