--- a/component-library/components/generic/form/radio-button-group/radio-button-group.eleventy.liquid
+++ b/component-library/components/generic/form/radio-button-group/radio-button-group.eleventy.liquid
@@ -1,6 +1,6 @@
 {% assign_local c = "c-radio-button-group" %}
 <div class="{{ c }}">
-    <fieldset class="{{ c }}__group" onClick="validateInputGroup(this)">
+    <fieldset class="{{ c }}__group" onClick="validateInputGroup(this)" {% if helper_text %}aria-describedby="{{ id }}--helper"{% endif %}>
         <legend class="{{ c }}__group__label">{{ label }}</legend>
         <div class="{{ c }}__group__inputs {{ c }}__group__inputs--arrangement-{{ arrangement }}">
             {% assign_local group_name = id %}
@@ -14,7 +14,7 @@
     {% if helper_text %}
         <div class="{{ c }}__helper">
             {% bookshop "generic/icon" svg_icon:"outline/information-circle" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
-            <p class="{{ c }}__helper__text">{{ helper_text }}<p>
+            <p class="{{ c }}__helper__text" id="{{ id }}--helper" role="tooltip">{{ helper_text }}<p>
         </div>
     {% endif %}
 
