--- a/component-library/components/generic/form/select-input/select-input.eleventy.liquid
+++ b/component-library/components/generic/form/select-input/select-input.eleventy.liquid
@@ -3,7 +3,8 @@
   <label class="{{ c }}__label" for="{{ id }}">{{ label }}</label>
   <select class="{{ c }}__input"
     name="{{ label }}"
-    id="{{ id }}">
+    id="{{ id }}"
+    {% if helper_text %}aria-describedby="{{ id }}--helper"{% endif %}>
     {% for option in options %}
         <option value="{{ option.key }}">{{ option.key }}</option>
     {% endfor %}
@@ -13,7 +14,7 @@
   {% if helper_text %}
       <div class="{{ c }}__helper">
           {% bookshop "generic/icon" svg_icon:"outline/information-circle" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
-          <p class="{{ c }}__helper__text">{{ helper_text }}<p>
+          <p class="{{ c }}__helper__text" id="{{ id }}--helper" role="tooltip">{{ helper_text }}<p>
       </div>
   {% endif %}
 
