--- a/component-library/components/generic/form/time-input/time-input.eleventy.liquid
+++ b/component-library/components/generic/form/time-input/time-input.eleventy.liquid
@@ -22,6 +22,6 @@
 
     <div class="{{ c }}__error error">
         {% bookshop "generic/icon" svg_icon:"outline/x-circle" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
-        <p class="{{ c }}__error__text error__text">Error Message<p>
+        <p class="{{ c }}__error__text error__text" id="{{ id }}--error">Error Message<p>
     </div>
 </div>
