--- a/component-library/components/generic/form/country-select-input/country-select-input.scss
+++ b/component-library/components/generic/form/country-select-input/country-select-input.scss
@@ -14,6 +14,7 @@
         border: 2px solid;
         grid-row: 2;
         grid-column: 1;
+        cursor: pointer;
 
         // custom arrow
         -webkit-appearance: none;
