--- a/component-library/components/generic/form/select-input/select-input.scss
+++ b/component-library/components/generic/form/select-input/select-input.scss
@@ -14,6 +14,7 @@
         border: 2px solid;
         grid-row: 2;
         grid-column: 1;
+        cursor: pointer;
 
         -webkit-appearance: none;
         appearance: none;
