--- a/component-library/components/generic/form/country-select-input/country-select-input.scss
+++ b/component-library/components/generic/form/country-select-input/country-select-input.scss
@@ -23,6 +23,7 @@
         color: var(--brand-grey-000, #F9F9FB);
 
         &::placeholder {
+            opacity: 1;
             color: var(--brand-grey-400, #B6B6B8);
         }
 
@@ -33,6 +34,7 @@
     }
 
     &__dropdown-arrow {
+        pointer-events: none;
         grid-row: 2;
         grid-column: 1;
         align-self: center;
