Feat: add CloudCannon fields to form

--- a/component-library/components/generic/form/email-input/email-input.eleventy.liquid
+++ b/component-library/components/generic/form/email-input/email-input.eleventy.liquid
@@ -4,7 +4,7 @@
     <input class="{{ c }}__input"
         type="email" 
         id="{{ id }}" 
-        name="{{ label }}" 
+        name="_replyto" 
         placeholder="{{ placeholder }}"
         {% if required %}required{% endif %}
         onblur="validateInput(this)"
