--- a/component-library/components/generic/form/checkbox-group/checkbox-group.eleventy.liquid
+++ b/component-library/components/generic/form/checkbox-group/checkbox-group.eleventy.liquid
@@ -3,7 +3,7 @@
     <fieldset class="{{ c }}__group" onClick="validateInputGroup(this)" {% if helper_text %}aria-describedby="{{ id }}--helper"{% endif %}>
         <legend class="{{ c }}__group__label">{{ label }}</legend>
         <div class="{{ c }}__group__inputs {{ c }}__group__inputs--arrangement-{{ arrangement }}">
-            {% assign_local group_name = id %}
+            {% assign_local group_name = label | append: "-" | append: id %}
             {% for item in checkboxes %}
                 {% bookshop "generic/form/checkbox-input" bind:item group_name:group_name %}
             {% endfor %}
