--- a/component-library/components/generic/form/radio-input/radio-input.eleventy.liquid
+++ b/component-library/components/generic/form/radio-input/radio-input.eleventy.liquid
@@ -4,6 +4,7 @@
         type="radio" 
         id="{{ id }}" 
         name="{{ group_name }}"
+        value="{{ label }}"
         {% if checked %}checked{% endif %} 
         {% if required %}required{% endif %}>
     <label class="{{ c }}__label" for="{{ id }}">{{ label }}</label>
