--- a/component-library/components/generic/form/radio-input/radio-input.scss
+++ b/component-library/components/generic/form/radio-input/radio-input.scss
@@ -2,6 +2,7 @@
     display: flex;
     gap: 10px;
     align-items: center;
+    color: var(--brand-grey-000, #F9F9FB);
 
     &__input {
         appearance: none;
