Feat: add code from https://github.com/zachleat/demo-cloudcannon-image-optimization

--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -4,7 +4,6 @@
 
 {% else %}
 
-    {% assign image_path = "src/" | append: image_path %}
-    {% image image_path, image_alt %}
+    {% image image_path, image_alt, false %}
 
 {% endif %}
