--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -2,8 +2,12 @@
 
     <img class="c-image--live-editing" src="{{ image_path }}" alt="{{ image_alt }}">
 
+{% elsif image_path contains 'http://' or image_path contains 'https://' %}
+
+    <img class="c-image" src="{{ image_path }}" alt="{{ image_alt }}">
+
 {% else %}
 
-    {% image image_path, image_alt, false %}
+    {% image image_path, image_alt, 'c-image', false %}
 
 {% endif %}
