--- a/component-library/components/generic/image/image.eleventy.liquid
+++ b/component-library/components/generic/image/image.eleventy.liquid
@@ -8,6 +8,6 @@
 
 {% else %}
 
-    {% image image_path, image_alt, 'c-image', false %}
+    {% image image_path, image_alt, 'c-image', true %}
 
 {% endif %}
