--- a/component-library/components/generic/button/button.eleventy.liquid
+++ b/component-library/components/generic/button/button.eleventy.liquid
@@ -2,13 +2,13 @@
 {% assign arrow = "arrow-" | append: arrow %}
 
 {% if url and url!=''%}
-    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} target="_blank" rel="noopener noreferrer" onclick="{{ onclick }}" id="{{ id }}">
+    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} {% if open_in_new_tab %}target="_blank" rel="noopener noreferrer"{% endif %} onclick="{{ onclick }}" id="{{ id }}">
         {{ text }}
         {% if arrow %}
             {% bookshop "generic/icon" svg_icon:arrow icon_type:"solid" icon_size:'tiny'  color:'transparent' %}
         {% endif %}
     </a>
-    {% else %}
+{% else %}
     <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} onclick='{{ onclick }}' id="{{ id }}">
         {{ text }}
         {% if arrow %}
