Test: icon colour in live editing

--- a/component-library/components/generic/button/button.scss
+++ b/component-library/components/generic/button/button.scss
@@ -47,12 +47,9 @@
   }
 
   .c-icon {
-      &__svg {
+      &__svg, &__image {
         --c-icon-color: var(--_button-color);
       }
 
-      &__image {
-        background-color: var(--_button-color) ;
-      }
   }
 }
