Test/fix: icon colour

--- a/component-library/components/generic/button/button.scss
+++ b/component-library/components/generic/button/button.scss
@@ -51,5 +51,8 @@
         --c-icon-color: var(--_button-color);
       }
 
+      &__image {
+        background: var(--_button-color) ;
+      }
   }
 }
