--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -9,8 +9,8 @@
 
 <span class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
     {% if env_bookshop_live %}
-        <div class="{{ c }}__image" style="--url: url('{{ icon_path }}')"></div>
+        <span class="{{ c }}__image" style="--url: url('{{ icon_path }}')"></span>
     {% else %}
         {{ '/src' | append: icon_path  | svgContents: "c-icon__svg" }}
     {% endif %}
-<span>
+</span>
