--- a/component-library/components/generic/button/button.eleventy.liquid
+++ b/component-library/components/generic/button/button.eleventy.liquid
@@ -1,18 +1,18 @@
 {% assign c = "c-button" %}
-{% assign arrow = "arrow-" | append: arrow %}
+{% assign arrow_type = "arrow-" | append: arrow %}
 
 {% if url and url!=''%}
-    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} {% if open_in_new_tab %}target="_blank" rel="noopener noreferrer"{% endif %} onclick="{{ onclick }}" id="{{ id }}">
+    <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} {% if open_in_new_tab %}target="_blank" rel="noopener noreferrer"{% endif %} onclick="{{ onclick }}">
         {{ text }}
         {% if arrow %}
-            {% bookshop "generic/icon" svg_icon:arrow icon_type:"solid" icon_size:'tiny'  color:'transparent' %}
+            {% bookshop "generic/icon" svg_icon:arrow_type icon_type:"solid" icon_size:'tiny'  color:'transparent' %}
         {% endif %}
     </a>
 {% else %}
-    <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} onclick='{{ onclick }}' id="{{ id }}">
+    <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} onclick='{{ onclick }}'>
         {{ text }}
         {% if arrow %}
-            {% bookshop "generic/icon" svg_icon:arrow icon_type:"solid" icon_size:'tiny'  color:'transparent' %}
+            {% bookshop "generic/icon" svg_icon:arrow_type icon_type:"solid" icon_size:'tiny'  color:'transparent' %}
         {% endif %}
     </button>
 {% endif %}
