Fix: change input name

--- a/component-library/components/generic/button/button.eleventy.liquid
+++ b/component-library/components/generic/button/button.eleventy.liquid
@@ -5,14 +5,14 @@
     <a href="{{ url }}" class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} {% if open_in_new_tab %}target="_blank" rel="noopener noreferrer"{% endif %} {% if onclick %}onclick="{{ onclick }}"{% endif %}>
         {{ text }}
         {% if arrow %}
-            {% bookshop "generic/icon" svg_icon:arrow_type icon_type:"solid" icon_size:'extra-small'  color:'transparent' %}
+            {% bookshop "generic/icon" hero_icon_name:arrow_type icon_type:"solid" icon_size:'extra-small'  color:'transparent' %}
         {% endif %}
     </a>
 {% else %}
     <button class="{{c}} {{c}}--{{ variant }}" {% if disabled %}disabled{% endif %} {% if onclick %}onclick="{{ onclick }}"{% endif %}>
         {{ text }}
         {% if arrow %}
-            {% bookshop "generic/icon" svg_icon:arrow_type icon_type:"solid" icon_size:'extra-small'  color:'transparent' %}
+            {% bookshop "generic/icon" hero_icon_name:arrow_type icon_type:"solid" icon_size:'extra-small'  color:'transparent' %}
         {% endif %}
     </button>
 {% endif %}
