--- a/component-library/components/generic/icon/icon.eleventy.liquid
+++ b/component-library/components/generic/icon/icon.eleventy.liquid
@@ -1,11 +1,11 @@
 {% assign c = "c-icon" %}
 
 {% assign icon_style="custom" %}
-{% assign icon_path=svg_icon %}
+{% assign icon_path=hero_icon_name %}
 
 {% comment %} Append path and define style if the icon is selected from the heroicon library options {% endcomment %}
 {% assign icon_style = icon_type %}
-{% assign icon_path = "/assets/images/icons/" | append: icon_type | append: "/" | append: svg_icon  | append: '.svg' %}
+{% assign icon_path = "/assets/images/icons/" | append: icon_type | append: "/" | append: hero_icon_name  | append: '.svg' %}
 
 <span class="{{ c }} {{ c }}--{{ icon_size }} {{ c }}--{{ icon_style }} {% if rounded_border %}{{c}}--round{% endif %}" style="--c-icon-color: {{ color }}">
     {% if env_bookshop_live %}
