Feat: match changes to icon component

--- a/component-library/components/generic/form/select-input/select-input.eleventy.liquid
+++ b/component-library/components/generic/form/select-input/select-input.eleventy.liquid
@@ -9,11 +9,11 @@
         <option value="{{ option.name }}">{{ option.name }}</option>
     {% endfor %}
   </select>
-  <div class="{{ c }}__dropdown-arrow">{% bookshop "generic/icon" svg_icon:"solid/chevron-down" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
+  <div class="{{ c }}__dropdown-arrow">{% bookshop "generic/icon" hero_icon_name:"chevron-down" icon_type:"solid" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
 
   {% if helper_text %}
       <div class="{{ c }}__helper">
-          {% bookshop "generic/icon" svg_icon:"outline/information-circle" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
+          {% bookshop "generic/icon" hero_icon_name:"information-circle" icon_type:"outline" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
           <p class="{{ c }}__helper__text" id="{{ id }}--helper" role="tooltip">{{ helper_text }}<p>
       </div>
   {% endif %}
