--- a/component-library/components/generic/form/date-input/date-input.eleventy.liquid
+++ b/component-library/components/generic/form/date-input/date-input.eleventy.liquid
@@ -11,18 +11,18 @@
         onblur="validateInput(this)"
         {% if required %}required{% endif %}
         {% if helper_text %}aria-describedby="{{ id }}--helper"{% endif %}>
-    <div class="{{ c }}__icon">{% bookshop "generic/icon" svg_icon:"outline/calendar-days" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
-    <div class="{{ c }}__dropdown-arrow">{% bookshop "generic/icon" svg_icon:"solid/chevron-down" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
+    <div class="{{ c }}__icon">{% bookshop "generic/icon" hero_icon_name:"calendar-days" icon_type:"outline" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
+    <div class="{{ c }}__dropdown-arrow">{% bookshop "generic/icon" hero_icon_name:"chevron-down" icon_type:"solid" icon_size:'extra-small' rounded_border:false color:'white' %}</div>
 
     {% if helper_text %}
         <div class="{{ c }}__helper">
-            {% bookshop "generic/icon" svg_icon:"outline/information-circle" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
+            {% bookshop "generic/icon" hero_icon_name:"information-circle" icon_type:"outline" icon_size:'extra-small' rounded_border:false color:'var(--brand-grey-000, #F9F9FB)' %}
             <p class="{{ c }}__helper__text" id="{{ id }}--helper" role="tooltip">{{ helper_text }}<p>
         </div>
     {% endif %}
 
     <div class="{{ c }}__error error">
-        {% bookshop "generic/icon" svg_icon:"outline/x-circle" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
+        {% bookshop "generic/icon" hero_icon_name:"x-circle" icon_type:"outline" icon_size:'extra-small' rounded_border:false color:'var(--error-red-300, #BF2323)' %}
         <p class="{{ c }}__error__text error__text" id="{{ id }}--error">Error Message<p>
     </div>
 </div>
