Feat: add phone input validation

--- a/component-library/components/generic/form/phone-input/phone-input.eleventy.liquid
+++ b/component-library/components/generic/form/phone-input/phone-input.eleventy.liquid
@@ -8,6 +8,7 @@
         {% if required %}required{% endif %}
         onblur="validateInput(this)"
         oninput="validateInputTyping(this)"
+        pattern="^[0-9+\(\)#\.\s\-\*]+$"
         {% if helper_text %}aria-describedby="{{ id }}--helper"{% endif %}>
 
     {% if helper_text %}
