--- a/component-library/components/sections/hero/hero.eleventy.liquid
+++ b/component-library/components/sections/hero/hero.eleventy.liquid
@@ -1,4 +1,10 @@
 {% assign_local c = "c-hero" %}
-<div class="{ c }">
-    <p>{{ text }}</p>
-</div>
+<section class="{{ c }} {% if variant=="left-right-feature" %}{{ c }}--left-right-variant{% endif %}">
+    {% bookshop "generic/image" bind:background.image %}
+    <div class="{{ c }}__content">
+        {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
+        {% if content.description %}{% bookshop "generic/text-block" text:content.description %}{% endif %}
+    <div>
+        {% if content.button %}{% bookshop "generic/button" bind:content.button %}{% endif %}
+    </div>
+</section>
