--- a/component-library/components/sections/hero/hero.scss
+++ b/component-library/components/sections/hero/hero.scss
@@ -12,7 +12,8 @@
     grid-column: 1 / -1;
   }
   & .c-image,
-  .c-image--live-editing {
+  .c-image--live-editing,
+  picture {
     grid-row: 1 / -1;
     grid-column: 1 / -1;
     height: 100%;
@@ -48,7 +49,8 @@
       grid-row: 2 / 3;
     }
     & .c-image,
-    .c-image--live-editing {
+    .c-image--live-editing,
+    picture {
       grid-row: 2 / 3;
       // grid-column: 1 / -1;
     }
@@ -68,7 +70,8 @@
         grid-row: 1 / 2;
       }
       & .c-image,
-      .c-image--live-editing {
+      .c-image--live-editing,
+      picture {
         grid-column: 9 / -1;
         grid-row: 1 / 2;
       }
