--- a/component-library/components/simple/form-builder/form-builder.eleventy.liquid
+++ b/component-library/components/simple/form-builder/form-builder.eleventy.liquid
@@ -14,6 +14,5 @@
     {% if inbox_key %}<input type="hidden" name="inbox_key" value="{{ inbox_key }}">{% endif %}
     {% if subject %}<input type="hidden" name="_subject" value="{{ subject }}">{% endif %}
 
-    {% comment %} TODO: replace button {% endcomment %}
-    <button type="submit">Submit</button>
+    <div class="{{ c }}__submit-button">{% bookshop "generic/button" bind:submit_button %}</div>
 </form>
