--- a/component-library/components/sections/centered-large-asset/centered-large-asset.scss
+++ b/component-library/components/sections/centered-large-asset/centered-large-asset.scss
@@ -17,6 +17,10 @@
         align-items: center;
     }
 
+    &__button {
+        grid-column: 2 / -2;
+    }
+
     @media screen and (min-width: 1279px) {
         &__heading {
             grid-column: 4 / -4;
