--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,7 @@
 @import "reset.css";
-@import 'variables.scss';
-@import 'nav.scss';
+@import "variables.scss";
+@import "nav.scss";
+@import "footer.scss";
 
 body {
   display: grid;
