--- a/component-library/components/sections/centered-large-asset/centered-large-asset.eleventy.liquid
+++ b/component-library/components/sections/centered-large-asset/centered-large-asset.eleventy.liquid
@@ -4,14 +4,18 @@
                 component--dark
             {% endif %}">
     
-    <div class="{{ c }}__heading">
-        {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
-        {% if content.description %}{% bookshop "generic/text-block" text:content.description %}{% endif %}
-    </div>
+    {% if content.heading or content.description %}
+        <div class="{{ c }}__heading">
+            {% if content.heading %}{% bookshop "generic/component-heading" bind:content.heading %}{% endif %}
+            {% if content.description %}{% bookshop "generic/text-block" text:content.description %}{% endif %}
+        </div>
+    {% endif %}
 
-    <div class="{{ c }}__asset">
-        {% if content.asset %}{% bookshop "{{content.asset._bookshop_name}}" bind:content.asset %}{% endif %}
-    </div>
+    {% if content.asset %}
+        <div class="{{ c }}__asset">
+            {% bookshop "{{content.asset._bookshop_name}}" bind:content.asset %}
+        </div>
+    {% endif %}
 
     {% if content.button %}
         <div class="{{ c }}__button">{% bookshop "generic/button" bind:content.button %}</div>
