--- a/component-library/components/sections/embed/embed.eleventy.liquid
+++ b/component-library/components/sections/embed/embed.eleventy.liquid
@@ -15,7 +15,7 @@
         </div>
     {% endif %}
     <div class="{{ c }}__embed" style="--{{ c }}-ratio: {{ styles.embed_ratio }}">
-        {{ embed }}
+        {{ content.embed }}
     </div>
 
     {% if content.button %}
